feat: now instead of reading one txt we read each gen selected